k8s/log-message-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-message-processor
  namespace: microservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-message-processor
  template:
    metadata:
      labels:
        app: log-message-processor
    spec:
      containers:
        - name: log-message-processor
          image: chechoiot/log-message-processor:latest
