k8s/network-policy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: microservice-app
spec:
  podSelector: {}   # Aplica a TODOS los pods del namespace
  policyTypes:
    - Ingress
